added support for QPSK/16QAM/64QAM modulation and 2/3 3/4 coding rate.

--- a/802.11ag.vcproj
+++ b/802.11ag.vcproj
@@ -194,12 +194,24 @@
 				RelativePath=".\main.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\mapper.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\mapper.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="头文件"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\common.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="资源文件"
