--- a/802.11ag.vcproj
+++ b/802.11ag.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;IEEE80211_MSSE2"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -114,9 +114,12 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				FavorSizeOrSpeed="1"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;IEEE80211_MSSE2"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
+				EnableEnhancedInstructionSet="2"
+				FloatingPointModel="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -232,6 +235,14 @@
 			</File>
 			<File
 				RelativePath=".\viterbi_decoder_generic.h"
+				>
+			</File>
+			<File
+				RelativePath=".\viterbi_decoder_x86.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\viterbi_decoder_x86.h"
 				>
 			</File>
 		</Filter>
