SSE2 for symbol alignment.

--- a/802.11ag.vcproj
+++ b/802.11ag.vcproj
@@ -205,6 +205,10 @@
 				RelativePath=".\mapper.h"
 				>
 			</File>
+			<File
+				RelativePath=".\sse_mathfun.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
